truncator overflow bug to solve, nativeElement error

--- a/src/app/note-card/note-card.component.scss
+++ b/src/app/note-card/note-card.component.scss
@@ -26,6 +26,27 @@
       font-weight: bold;
       color: $purple;
     }
+
+    .note-card-body {
+      position: relative;
+      color: #555;
+      max-height: 80px;
+      overflow: hidden;
+
+      .fade-out-truncation {
+        position: absolute;
+        pointer-events: none;
+        bottom: 0;
+        height: 50%;
+        width: 100%;
+        background: linear-gradient(
+          to bottom,
+          rgba(#fff, 0) 0%,
+          rgba(#fff, 0.8) 50%,
+          #fff 100%
+        );
+      }
+    }
   }
 }
 
