--- a/src/app/pages/notes-list/notes-list.component.scss
+++ b/src/app/pages/notes-list/notes-list.component.scss
@@ -9,3 +9,8 @@
 .notes-list {
   margin-top: 35px;
 }
+
+app-note-card {
+  display: block;
+  margin-bottom: 25px;
+}
